--- a/style.css
+++ b/style.css
@@ -37,34 +37,37 @@ body {
     padding: 20px;
     border-radius: 5px;
     background: #092491;
-    box-shadow: 5px 5px 15px rgba(0,0,0,0.3);
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.384);
     width: 250px;
     height: 420px;
 }
 
 .display {
     grid-column: span 4;
-    height: 30px;
-    background: rgb(216, 216, 216);
-    color: black;
+    height: 35px;
+    background: rgb(208, 213, 199);
+    color: rgba(0, 0, 0, 0.832);
     font-family: 'ds-digitalnormal';
-    font-size: 2rem;
+    font-size: 2.5rem;
     text-align: right;
-    padding: 10px;
+    text-shadow: .5px .5px 2px rgba(0, 0, 0, 0.533);
+    padding: 5px;
     border-radius: 5px;
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    box-shadow: inset 10px 10px 10px rgba(7, 0, 0, 0.293);
+    box-shadow: inset 5px 5px 5px rgba(7, 0, 0, 0.24);
 }
 
 button {
     height: 60px;
     font-size: 1.2rem;
     font-weight: 100;
+    text-align: left;
+    vertical-align:text-top;
     border-radius: 6px;
     cursor: pointer;
-    box-shadow: 0px 2px 5px rgba(0,0,0,0.2);
+    box-shadow: 2px 2px 5px rgba(0,0,0,0.2);
     background: whitesmoke;
     color: #0b2bac;
     transition: 0.1s;
@@ -73,15 +76,17 @@ button {
 .operator {
     background: rgb(194, 0, 0);
     color: whitesmoke;
+    text-align: center;
 }
 
 .equal {
     grid-column: span 2;
     background: rgb(194, 0, 0);
     color: whitesmoke;
+    text-align: center;
 }
 
-.clear {
+.solar {
     grid-column: span 2;
     pointer-events: none;
     background: rgb(19, 0, 0);
